topbar conversion from snippet to section file

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -29,7 +29,7 @@
 
     <header class="header">
       <!-- Top Bar-->
-      {% render "topbar" %}
+      {% section "topbar" %}
       {% render "navbar" %}
     </header>
 
