--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -1,4 +1,4 @@
-{%paginate collection.products by 3%}
+{%paginate collection.products by 9%}
 {%assign page_count = paginate.product%}
 
 <section class="hero hero-page gray-bg padding-small">
@@ -28,173 +28,53 @@
         <div class="block">
           <h6 class="text-uppercase">Product Categories</h6>
           <ul class="list-unstyled">
-            <li>
-              <a href="#" class="d-flex justify-content-between align-items-center">
-                <span>Men's Collection</span>
-                <small>200</small>
-              </a>
-              <ul class="list-unstyled">
-                <li>
-                  <a href="#">T-shirts</a>
-                </li>
-                <li>
-                  <a href="#">Hoodies</a>
-                </li>
-                <li>
-                  <a href="#">Shorts</a>
-                </li>
-              </ul>
-            </li>
-            <li class="active">
-              <a href="#" class="d-flex justify-content-between align-items-center">
-                <span>Women's Collection</span>
-                <small>120</small>
-              </a>
-              <ul class="list-unstyled">
-                <li>
-                  <a href="#">T-shirts</a>
-                </li>
-                <li>
-                  <a href="#">Dresses</a>
-                </li>
-                <li>
-                  <a href="#">Pants</a>
-                </li>
-                <li>
-                  <a href="#">Shorts</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="#" class="d-flex justify-content-between align-items-center">
-                <span>Accessories</span>
-                <small>80</small>
-              </a>
-              <ul class="list-unstyled">
-                <li>
-                  <a href="#">Wallets</a>
-                </li>
-                <li>
-                  <a href="#">Backpacks</a>
-                </li>
-                <li>
-                  <a href="#">Belts</a>
-                </li>
-                <li>
-                  <a href="#">Necklaces</a>
-                </li>
-              </ul>
-            </li>
+
+            {%for link in linklists[section.settings.collection_sidebar].links%}
+              <li>
+                <a href="{{link.url}}" class="d-flex justify-content-between align-items-center">
+                  <span>{{link.title}}</span><small>{{collections[link.title].products_count}}</small>
+                </a>
+                <ul class="list-unstyled">
+                  {%for childlink in link.links%}
+                    <li><a href="{{childlink.url}}">{{childlink.title}}</a></li>
+                  {%endfor%}
+                </ul>
+              </li>
+            {%endfor%}
+
           </ul>
         </div>
+
         <div class="block">
-          <h6 class="text-uppercase">Filter By Price
-          </h6>
-          <div id="slider-snap"></div>
-          <div class="value d-flex justify-content-between">
-            <div class="min">From
-              <span id="slider-snap-value-lower" class="example-val"></span>$</div>
-            <div class="max">To
-              <span id="slider-snap-value-upper" class="example-val"></span>$</div>
-          </div>
-          <a href="#" class="filter-submit">filter</a>
-        </div>
-        <div class="block">
-          <h6 class="text-uppercase">Brands
-          </h6>
-          <form action="#">
+          <h6 class="text-uppercase">Size</h6>
+          <h1>{{collection_handle}}</h1>
+
+          {%capture collection_handle%}
+            /collections/
+            {%if collection.handle.size > 0%}{{collection.handle}}{%else%} all
+            {%endif%}/
+          {%endcapture%}
+
             <div class="form-group mb-1">
-              <input
-                id="brand0"
-                type="checkbox"
-                name="clothes-brand"
-                checked
-                class="checkbox-template">
-              <label for="brand0">Calvin Klein
-                <small>(18)</small>
-              </label>
-            </div>
-            <div class="form-group mb-1">
-              <input
-                id="brand1"
-                type="checkbox"
-                name="clothes-brand"
-                checked
-                class="checkbox-template">
-              <label for="brand1">Levi Strauss
-                <small>(30)</small>
-              </label>
-            </div>
-            <div class="form-group mb-1">
-              <input
-                id="brand2"
-                type="checkbox"
-                name="clothes-brand"
-                class="checkbox-template">
-              <label for="brand2">Hugo Boss
-                <small>(120)</small>
-              </label>
-            </div>
-            <div class="form-group mb-1">
-              <input
-                id="brand3"
-                type="checkbox"
-                name="clothes-brand"
-                class="checkbox-template">
-              <label for="brand3">Tomi Hilfiger
-                <small>(70)</small>
-              </label>
-            </div>
-            <div class="form-group mb-1">
-              <input
-                id="brand4"
-                type="checkbox"
-                name="clothes-brand"
-                class="checkbox-template">
-              <label for="brand4">Tom Ford
-                <small>(110)</small>
-              </label>
-            </div>
-          </form>
-        </div>
-        <div class="block">
-          <h6 class="text-uppercase">Size
-          </h6>
-          <form action="#">
-            <div class="form-group mb-1">
-              <input
-                id="size0"
-                type="radio"
-                name="size"
-                checked
-                class="radio-template">
+              <input id="size0" type="radio" name="size" {%if current_tags contains "size_small" %}checked{% endif%} class="radio-template" 
+                  onclick= "window.location = '{{collection_handle | strip | append: 'size_small'}}'">
               <label for="size0">Small</label>
             </div>
             <div class="form-group mb-1">
-              <input
-                id="size1"
-                type="radio"
-                name="size"
-                class="radio-template">
+              <input id="size1" type="radio" name="size" {% if current_tags contains "size_medium" %}checked{% endif%} class="radio-template"
+                  onclick= "window.location.href = '{{collection_handle | strip | append: 'size_medium'}}'">
               <label for="size1">Medium</label>
             </div>
             <div class="form-group mb-1">
-              <input
-                id="size2"
-                type="radio"
-                name="size"
-                class="radio-template">
+              <input id="size2" type="radio" name="size" {%if current_tags contains "size_large" %}checked{% endif%}class="radio-template"
+                  onclick= "window.location = '{{collection_handle | strip | append: 'size_large'}}'">
               <label for="size2">Large</label>
             </div>
             <div class="form-group mb-1">
-              <input
-                id="size3"
-                type="radio"
-                name="size"
-                class="radio-template">
+              <input id="size3" type="radio" name="size" {%if current_tags contains "size_x-large" %}checked{% endif%} class="radio-template"
+                  onclick= "window.location = '{{collection_handle | strip | append: 'size_x-large'}}'">
               <label for="size3">X-Large</label>
             </div>
-          </form>
         </div>
       </div>
       <!-- /Sidebar end-->
@@ -202,15 +82,11 @@
       <div class="products-grid col-xl-9 col-lg-8 sidebar-left">
         <header class="d-flex justify-content-between align-items-start">
           <span class="visible-items">Showing
-            <strong>{{ paginate.current_page }} - {{ paginate.pages }}
-            </strong>of
-            <strong>{{ collection.products_count }}
-            </strong>results</span>
+            <strong>{{ paginate.current_page }} - {{ paginate.pages }}</strong> of <strong>{{ collection.products_count }}</strong> results</span>
           <select id="sorting" class="bs-select">
-            <option value="newest">Newest</option>
-            <option value="oldest">Oldest</option>
-            <option value="lowest-price">Low Price</option>
-            <option value="heigh-price">High Price</option>
+              {%for option in collection.sort_options%}
+                <option value="{{option.value}}">{{ option.name}}</option>
+              {%endfor%}
           </select>
         </header>
         <div class="row">
@@ -218,7 +94,8 @@
             <div class="item col-xl-4 col-md-6">
               <div class="product is-gray">
                 <div class="image d-flex align-items-center justify-content-center">
-                  <img src="{{ product | image_url: width: 400 | image_tag: width: 300 }}" >
+                  {% comment %} <img src="{{ product | image_url: width: 400 | image_tag: width: 300 }}" > {% endcomment %}
+                  {{ product | image_url: width: 400 | image_tag }}
                   <div class="hover-overlay d-flex align-items-center justify-content-center">
                     <div class="CTA d-flex align-items-center justify-content-center">
                       <a href="#" class="add-to-cart"><i class="fa fa-shopping-cart"></i></a>
@@ -274,3 +151,17 @@
 </main>
 
 {%endpaginate%}
+
+
+{%schema%}
+  {
+    "name": "Collections",
+    "settings": [
+      {
+        "id": "collection_sidebar",
+        "type": "link_list",
+        "label": "Collection Sidebar"
+      }
+    ]
+  }
+{%endschema%}
