--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -89,6 +89,7 @@
               {%endfor%}
           </select>
         </header>
+
         <div class="row">
           {%for product in collection.products%}
             <div class="item col-xl-4 col-md-6">
@@ -99,7 +100,7 @@
                   <div class="hover-overlay d-flex align-items-center justify-content-center">
                     <div class="CTA d-flex align-items-center justify-content-center">
                       <a href="#" class="add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-                      <a href="detail.html" class="visit-product active"><i class="icon-search"></i>View</a>
+                      <a href="{{product.url}}" class="visit-product active"><i class="icon-search"></i>View</a>
                       <a href="#" data-toggle="modal" data-target="#exampleModal" class="quick-view"><i class="fa fa-arrows-alt"></i></a>
                       </div>
                   </div>
