input type change

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -102,7 +102,7 @@
             {%endfor%}
           </div>
 
-          <input type="text" id="variant-id" name="id" value="{{product.variants.first.id}}">
+          <input type="hidden" id="variant-id" name="id" value="{{product.variants.first.id}}">
           <ul class="CTAs list-inline">
             <li class="list-inline-item">
               <button type="submit" class="btn btn-template wide">
