--- a/snippets/navbar.liquid
+++ b/snippets/navbar.liquid
@@ -148,7 +148,11 @@
             </li>
           {% elsif link.links != blank %}
             <li class="nav-item dropdown">
-              <a id="navbarHomeLink" href="index.html" data-toggle="dropdown" aria-haspopup="true"
+              <a
+                id="navbarHomeLink"
+                href="index.html"
+                data-toggle="dropdown"
+                aria-haspopup="true"
                 aria-expanded="false"
                 class="nav-link active">{{ link.title }}<i class="fa fa-angle-down"></i>
               </a>
@@ -364,42 +368,52 @@
             aria-expanded="false"
             class="dropdown-toggle">
             <i class="icon-cart"></i>
-            <div class="cart-no">1</div>
+            <div class="cart-no">{{ cart.item_count }}</div>
           </a>
           <a href="cart.html" class="text-primary view-cart">View Cart</a>
           <div aria-labelledby="cartdetails" class="dropdown-menu">
             <!-- cart item-->
-            <div class="dropdown-item cart-product">
-              <div class="d-flex align-items-center">
-                <div class="img"><img
-                    src="img/hoodie-man-1.png"
-                    alt="..."
-                    class="img-fluid"></div>
-                <div class="details d-flex justify-content-between">
-                  <div class="text">
-                    <a href="#">
-                      <strong>Heather Gray Hoodie</strong>
+
+            {% for line_item in cart.items %}
+              <div class="dropdown-item cart-product">
+                <div class="d-flex align-items-center">
+                  <div class="img"><img
+                      src="{{line_item.product.featured_image | img_url: '2048x'}}"
+                      alt="..."
+                      class="img-fluid"></div>
+                  <div class="details d-flex justify-content-between">
+                    <div class="text">
+                      <a href="#">
+                        <strong>{{ line_item.product.title }}</strong>
+                      </a>
+                      <small>Quantity: {{ line_item.quantity }}
+                      </small>
+                      <span class="price">{{ line_item.product.price | money }}
+                      </span>
+                    </div>
+                    <a href="/cart/change?line={{forloop.index}}&quantity=0" class="delete">
+                      <i class="fa fa-trash-o"></i>
                     </a>
-                    <small>Quantity: 1
-                    </small>
-                    <span class="price">$75.00
-                    </span>
                   </div>
-                  <a href="#" class="delete">
-                    <i class="fa fa-trash-o"></i>
-                  </a>
                 </div>
               </div>
-            </div>
+            {% endfor %}
+
             <!-- total price-->
             <div class="dropdown-item total-price d-flex justify-content-between">
               <span>Total</span>
-              <strong class="text-primary">$75.00</strong>
+              <strong class="text-primary">{{ cart.total_price | money }}</strong>
             </div>
             <!-- call to actions-->
             <div class="dropdown-item CTA d-flex">
-              <a href="cart.html" class="btn btn-template wide">View Cart</a>
-              <a href="checkout1.html" class="btn btn-template wide">Checkout</a>
+              <a href="/cart" class="btn btn-template wide">View Cart</a>
+
+              <form method="post" action="/cart">
+                <button
+                  type="submit"
+                  name="checkout"
+                  class="btn btn-template wide w-100">Checkout</button>
+              </form>
             </div>
           </div>
         </div>
