--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -87,4 +87,54 @@
       </div>
     </div>
   </section>
+
+  <section class="order-details no-padding-top"> 
+    <div class="container">
+      <div class="row">                         
+        <div class="col-lg-6">
+          <div class="block">
+            <div class="block-header">
+              <h6 class="text-uppercase">Coupon Code</h6>
+            </div>
+            <div class="block-body">
+              <p>If you have a coupon code, please enter it in the box below</p>
+              <form action="#">
+                <div class="form-group d-flex">
+                  <input type="text" name="coupon">
+                  <button type="submit" class="cart-black-button">Apply coupon</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="block">
+            <div class="block-header">
+              <h6 class="text-uppercase">Instructions for seller</h6>
+            </div>
+            <div class="block-body">
+              <p>If you have some information for the seller you can leave them in the box below</p>
+                <textarea name="note"></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="block">
+            <div class="block-header">
+              <h6 class="text-uppercase">Order Summary</h6>
+            </div>
+            <div class="block-body">
+              <p>Shipping and additional costs are calculated based on values you have entered.</p>
+              <ul class="order-menu list-unstyled">
+                <li class="d-flex justify-content-between"><span>Order Subtotal </span><strong>{{cart.original_total_price | money}}</strong></li>
+                {% comment %} <li class="d-flex justify-content-between"><span>Shipping and handling</span><strong>$10.00</strong></li>
+                <li class="d-flex justify-content-between"><span>Tax</span><strong>$0.00</strong></li> {% endcomment %}
+                <li class="d-flex justify-content-between"><span>Total</span><strong class="text-primary price-total">{{cart.total_price | money}}</strong></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-12 text-center CTAs">
+          <button type="submit" name="checkout" class="btn btn-template btn-lg wide">Proceed to checkout<i class="fa fa-long-arrow-right"></i></button></div>
+      </div>
+    </div>
+  </section>
 </form>
