--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -30,7 +30,7 @@
     <header class="header">
       <!-- Top Bar-->
       {% section "topbar" %}
-      {% render "navbar" %}
+      {% section "navbar" %}
     </header>
 
     {% if shop.customer_accounts_enabled %}
