--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,45 +1,63 @@
-   <section>
-        <div class="container">
-          <header class="mb-5">
-            <h2 class="heading-line">Contact form</h2>
-          </header>
+<section>
+  <div class="container">
+    <header class="mb-5">
+      <h2 class="heading-line">Contact Form</h2>
+    </header>
+    <div class="row">
+      <div class="col-md-7">
+        {% form 'contact', id: 'ContactForm'%}
+        <div class="controls">
           <div class="row">
-            <div class="col-md-7">
-              {% form 'contact', id: 'ContactForm'%}
-                <div class="controls">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <div class="form-group">
-                        <label for="ContactForm-name" class="form-label">Your firstname *</label>
-                        {% comment %} <input type="text" name="name" id="name" placeholder="Enter your firstname" required="required" class="form-control"> {% endcomment %}
-                        <input class="form-control" autocomplete="name" type="text" id="ContactForm-name" name="contact[firstname]"
-                          value="{% if form.first_name %}{{ form.first_name }}{% elsif customer %}{{ customer.first_name }}{% endif %}"
-                          placeholder="Your firstname">
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group">
-                        <label for="surname" class="form-label">Your lastname *</label>
-                        {% comment %} <input type="text" name="surname" id="surname" placeholder="Enter your  lastname" required="required" class="form-control"> {% endcomment %}
-                        <input class="form-control" autocomplete="name" type="text" id="ContactForm-name" name="contact[lastname]"
-                        value="{% if form.last_name %}{{ form.last_name }}{% elsif customer %}{{ customer.last_name }}{% endif %}"
-                        placeholder="Your lastname">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="email" class="form-label">Your email *</label>
-                    <input type="email" name="email" id="email" placeholder="Enter your  email" required="required" class="form-control">
-                  </div>
-                  <div class="form-group">
-                    <label for="message" class="form-label">Your message for us *</label>
-                    <textarea rows="4" name="message" id="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-template">Send message</button>
-                </div>
-              {%endform%}
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="ContactForm-name" class="form-label">Your firstname *</label>
+                {% comment %} <input type="text" name="name" id="name" placeholder="Enter your firstname"
+                  required="required" class="form-control"> {% endcomment %}
+                <input class="form-control" autocomplete="name" type="text" id="ContactForm-name"
+                  name="contact[firstname]"
+                  value="{% if form.first_name %}{{ form.first_name }}{% elsif customer %}{{ customer.first_name }}{% endif %}"
+                  placeholder="Your firstname">
+              </div>
             </div>
-          </section>
-
-
-
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="surname" class="form-label">Your lastname *</label>
+                {% comment %} <input type="text" name="surname" id="surname" placeholder="Enter your  lastname"
+                  required="required" class="form-control"> {% endcomment %}
+                <input class="form-control" autocomplete="name" type="text" id="ContactForm-name"
+                  name="contact[lastname]"
+                  value="{% if form.last_name %}{{ form.last_name }}{% elsif customer %}{{ customer.last_name }}{% endif %}"
+                  placeholder="Your lastname">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email" class="form-label">Your email *</label>
+            {% comment %} <input type="email" name="email" id="email" placeholder="Enter your  email"
+              required="required" class="form-control"> {% endcomment %}
+              <input autocomplete="email" type="email" id="ContactForm-email" class="form-control" name="contact[email]" spellcheck="false" autocapitalize="off"
+              value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
+              aria-required="true"
+            {% if form.errors contains 'email' %}
+              aria-invalid="true"
+              aria-describedby="ContactForm-email-error"
+            {% endif %}
+            placeholder="Your Email"
+          >
+          </div>
+          <div class="form-group">
+            <label for="message" class="form-label">Your message for us *</label>
+            {% comment %} <textarea rows="4" name="message" id="message" placeholder="Enter your message" required="required" 
+              class="form-control"></textarea>{% endcomment %}
+              <textarea rows="10" id="ContactForm-body" class="form-control"
+              name="contact[message]"
+              placeholder="Your message for us"
+            >
+              {{- form.body -}}
+            </textarea>
+          </div>
+          <button type="submit" class="btn btn-template">Send message</button>
+        </div>
+        {%endform%}
+      </div>
+</section>
